# Haven_mdev

./: .env  .env.railway  .gitignore  BUILD_STATUS_REPORT.md  BUILD_SUMMARY_FIX.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPREHENSIVE_AUDIT_PROGRESS_REPORT.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  DISCOVERIES_FIX_REPORT.md  DISCOVERIES_QUICK_START.md  DISCOVERY_SYNC_GUIDE.md  DOCUMENTATION_INDEX.md  FINAL_COMPREHENSIVE_AUDIT_REPORT.md  FINAL_SUMMARY.md  Haven Control Room.bat  IMPLEMENTATION_SUMMARY.md  KEEPER_DISCOVERIES_FORMAT_SUPPORT.md  KEEPER_TEST_COMPLETE.md  KEEPER_TEST_QUICKSTART.md  MAP_DISPLAY_FIX.md  MAP_FIX_COMPLETE.md  MOON_ORBIT_FIX_COMPLETE.md  NEXT_STEPS.md  NGROK_401_FIX.md  PHASE_4_COMPLETE.md  PROJECT_COMPLETE.md  Procfile  QUICK_REFERENCE.md  QUICK_REFERENCE_RPI.txt  RAILWAY_ARCHITECTURE.md  RAILWAY_FILES_TO_CREATE.md  RAILWAY_OPTION_B_GUIDE.md  README.md  READ_ME_FIRST.md  RPI_CREATIVE_UPGRADES_SUMMARY.md  RPI_IMPLEMENTATION_GUIDE.md  TESTING_GUIDE_v2.md  YH_DATABASE_QUICK_START.md  check_db_planets.py  check_recent_discoveries.bat  (+29 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
AI-project/: NGROK_SETUP.md  QUICK_REFERENCE_RPI.txt  RPI_CREATIVE_UPGRADES_PART1.md  RPI_CREATIVE_UPGRADES_SUMMARY.md  RPI_IMPLEMENTATION_GUIDE.md  Raspberry_Pi_5_Complete_Beginner_Guide.md  Round_table_AI_recommendations.md  master_ai_project.md  raspberry_pi_idea.md  round_table_ai_chat_monitor.md
Archive-Dump/: PHASE1_DATABASE_CONSOLIDATION_REPORT.md  (+13 more)
config/: .gitignore  HavenControlRoom.spec  build_user_exe.bat  conftest.py  data_schema.json  pyproject.toml  pytest.ini  requirements.txt  settings.py  settings_user.py  setup.py
config/icons/: README.txt
config/pyinstaller/: HavenControlRoom.spec
data/: data.json  (+6 more)
(+395 files in other folders)
