[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haven-starmap"
version = "3.0.0"
description = "No Man's Sky star mapping and visualization toolkit"
authors = [{name = "Haven Team"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "customtkinter>=5.2",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "mypy>=1.0",
    "black>=23.0",
]
build = [
    "pyinstaller>=6.0"
]

[project.scripts]
haven = "haven.control_room:main"
haven-wizard = "haven.system_entry_wizard:main"
haven-map = "haven.Beta_VH_Map:main"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, will tighten later
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["build/", "dist/", "Archive-Dump/", "tests/stress_testing/"]

# Per-module options
[[tool.mypy.overrides]]
module = "customtkinter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | Archive-Dump
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=src --cov-report=html --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
